Adding http basic auth admin security

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,4 @@
 STRIPE_PUBLISHABLE_KEY=your_test_key_here
 STRIPE_SECRET_KEY=your_test_key_here
+AUTH_NAME=your_auth_name_here
+AUTH_PASSWORD=your_auth_password_here
